Add bookmark shortcut

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Chrome Key Promoter",
   "version": "1.0",
   "description": "Get notifications whenever an action could be done with a keyboard shortcut.",
-  "permissions": ["notifications", "storage", "webNavigation"],
+  "permissions": ["notifications", "storage", "webNavigation", "bookmarks"],
   "background": {
     "service_worker": "js/background.js"
   }
