--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,5 +6,11 @@
   "permissions": ["notifications", "storage", "webNavigation", "bookmarks"],
   "background": {
     "service_worker": "js/background.js"
+  },
+  "icons": {
+    "16": "images/16.png",
+    "32": "images/32.png",
+    "48": "images/48.png",
+    "128": "images/128.png"
   }
 }
